<resources>
    <string name="app_name">Tanimals</string>
    <string name="LogoName">Logo</string>
    <string name="signup">Have no account yet? Sign Up</string>
    <string name="signin">Already have an account? Sign In</string>
    <string name="signinbut">Sign In</string>
    <string name="signupbut">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="matchesbut">Find Matches</string>
    <string name="profbut">My Profile</string>
    <string name="chatbut">Chats</string>
    <string name="logoutBut">Logout</string>
    <string name="name">Name</string>
    <string name="dateOfBirth">20–04–1969</string>
    <string name="breed">Breed</string>
    <string name="address">City</string>
    <string name="avatar">Avatar</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="choosePic">Choose picture</string>
    <string name="takePic">Take picture</string>
    <string name="title_activity_profile">Profile</string>
    <string name="saveBut">Save Profile</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ProfileFragment">THIS IS THE PROFILE FRAGMENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messagePlaceHolder">Messages received will be displayed here</string>
    <string name="messageSendPlaceHolder">Enter message to send</string>
    <string name="weatherpicker">🌞</string>
    <string name="sendLocation">Send</string>
    <string name="view_weather_data">View Weather</string>
    <string name="city_name_placeholder">City name</string>
</resources>
