<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".DashboardActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="167dp"
        android:layout_height="162dp"
        android:layout_marginTop="40dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/LogoName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/profilebut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/signin_button"
        android:text="@string/profbut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/findMatchesBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signin_button"
        android:text="@string/matchesbut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilebut" />

    <Button
        android:id="@+id/chatBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signin_button"
        android:text="@string/chatbut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findMatchesBut" />

    <Button
        android:id="@+id/logoutBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signin_button"
        android:text="@string/logoutBut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatBut" />
</androidx.constraintlayout.widget.ConstraintLayout>