<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/rose"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/avatar"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_weight="5"
            android:text="@string/name"
            android:textColor="#FFFF"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_chatbox"
        android:layout_width="372dp"
        android:layout_height="462dp"
        android:background="#ffffff"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <TextView
            android:id="@+id/textViewSubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/messagePlaceHolder" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextPublish"
        android:layout_width="291dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/messageSendPlaceHolder"
        android:inputType="text|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_chatbox"
        app:layout_constraintVertical_bias="0.868" />

    <Button
        android:id="@+id/button"
        android:layout_width="69dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:onClick="pickContact"
        android:text="@string/weatherpicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextPublish"
        app:layout_constraintTop_toTopOf="@+id/editTextPublish" />

</androidx.constraintlayout.widget.ConstraintLayout>